Fixed Spacing Problems

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,7 +18,7 @@ header {
     width: 100%;
     text-align: center;
     padding: 25px 0 25px 0;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
 
     h1 {
         padding: 10px;
@@ -50,7 +50,7 @@ a {
 .gridThree {
     display: grid;
     grid-template-columns: 30% 30% 30%;
-    grid-gap: 3%;
+    grid-gap: 5%;
 }
 
 .imgBox {
@@ -67,7 +67,7 @@ footer {
     width: 100%;
     text-align: center;
     padding: 25px 0 25px 0;
-    margin-top: 25px;
+    margin-top: 55px;
 }
 .topicImage {
     border-radius: 5px;
